--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- YouTube Subscribe Button -->
   <script src="https://apis.google.com/js/platform.js"></script>
   <div class="g-ytsubscribe"
-       data-channel="@hypercritical6712"
+       data-channelid="UCIIPOzAODPQ2KTE7z1LhjSA"
        data-layout="default"
        data-theme="dark"
        data-count="default">
