--- a/index.html
+++ b/index.html
@@ -1,5 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Subscribe to Unlock</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      color: white;
+      text-align: center;
+      padding: 50px;
+    }
+    h2 {
+      margin-bottom: 30px;
+      text-shadow: 0 0 10px #000;
+    }
+    #downloadBtn {
+      padding: 12px 24px;
+      font-size: 16px;
+      background-color: #00ccff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      display: none;
+      margin-top: 30px;
+      box-shadow: 0 0 10px #00ccff;
+    }
+  </style>
+</head>
 <body>
-  <img src="https://drive.google.com/uc?export=view&id=19UhnhjlPoLIQpD3S-d7Bb8yWkH-prfWU"
+  <!-- Static Background Image -->
+  <img src="https://drive.google.com/uc?export=view&id=1cLVgSkE38fNBtehkbHp_GJT60AdMw1_d"
        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;" />
 
   <h2>💖 Subscribe to unlock the download</h2>
@@ -24,3 +55,4 @@
     }, 3000);
   </script>
 </body>
+</html>
