--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       color: white;
       text-align: center;
       padding: 50px;
+      background-image: url('https://drive.google.com/uc?export=view&id=1cLVgSkE38fNBtehkbHp_GJT60AdMw1_d');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
     }
     h2 {
       margin-bottom: 30px;
@@ -29,9 +34,6 @@
   </style>
 </head>
 <body>
-  <!-- Static Background Image -->
-  <img src="https://drive.google.com/uc?export=view&id=1cLVgSkE38fNBtehkbHp_GJT60AdMw1_d"
-       style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;" />
 
   <h2>💖 Subscribe to unlock the download</h2>
 
@@ -54,5 +56,6 @@
       document.getElementById("downloadBtn").style.display = "inline-block";
     }, 3000);
   </script>
+
 </body>
 </html>
