--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <title>Subscribe to Unlock</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
       font-family: sans-serif;
       color: white;
       background-image: url('https://raw.githubusercontent.com/the321grax/Subscribe-Unlock/main/assets/0001.png');
@@ -15,12 +20,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
     }
 
     .container {
       text-align: center;
-      background-color: rgba(0, 0, 0, 0.5); /* Optional dark overlay */
+      background-color: rgba(0, 0, 0, 0.5); /* Optional overlay */
       padding: 40px;
       border-radius: 12px;
       box-shadow: 0 0 20px #00ccff;
