--- a/index.html
+++ b/index.html
@@ -22,19 +22,35 @@
       align-items: center;
     }
 
-    @keyframes pulse {
-      0%   { box-shadow: 0 0 10px #00ccff; }
-      50%  { box-shadow: 0 0 30px #00ccff; }
-      100% { box-shadow: 0 0 10px #00ccff; }
-    }
+@keyframes pulse {
+  0% {
+    box-shadow:
+      0 0 20px #00ccff,
+      0 0 40px #00ccff,
+      0 0 60px #00ccff;
+  }
+  50% {
+    box-shadow:
+      0 0 40px #00ccff,
+      0 0 80px #00ccff,
+      0 0 120px #00ccff;
+  }
+  100% {
+    box-shadow:
+      0 0 20px #00ccff,
+      0 0 40px #00ccff,
+      0 0 60px #00ccff;
+  }
+}
 
-    .container {
-      text-align: center;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 40px;
-      border-radius: 12px;
-      animation: pulse 2s infinite;
-    }
+.container {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 40px;
+  border-radius: 12px;
+  animation: pulse 2s infinite;
+}
+
 
     h2 {
       margin-bottom: 30px;
