--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       font-family: sans-serif;
       color: white;
       background-image: url('https://raw.githubusercontent.com/the321grax/Subscribe-Unlock/main/assets/0001.png');
-      background-size: cover;
+background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
