--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
       height: 100%;
     }
 
-    body {
-      font-family: sans-serif;
-      color: white;
-      background-image: url('https://raw.githubusercontent.com/the321grax/Subscribe-Unlock/main/assets/0001.png');
-background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-attachment: fixed;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+body {
+  font-family: sans-serif;
+  color: white;
+  background-image: url('https://raw.githubusercontent.com/the321grax/Subscribe-Unlock/main/assets/0001.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 
 @keyframes pulse {
   0% {
