--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
   font-family: sans-serif;
   color: white;
   background-image: url('https://raw.githubusercontent.com/the321grax/Subscribe-Unlock/main/assets/0001.png');
-  background-size: contain;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -23,6 +23,7 @@ body {
   align-items: center;
   height: 100vh;
 }
+
 
 
 @keyframes pulse {
